# curso-ebape-prog-aplic-cur2021-turma2021

./: .gitignore  .replit  README.md  pyproject.toml
1-html/: 01-first.html  05-tables.html  07-style1.html  08-style2.html  10-divs.html
1-html-css/1-basic/: 02-lists.html  03-images.html  04-links-com-img.html  04-links.html  05-tables.html  06-forms-exemplo.html  06-forms.html  09-style3.html  10-divs.html  12-style-tables.html  13-multiple-elements.html  14-css-selectors.html  15-attribute-selector.html  16-hover.html  estilo.css
1-html-css/2-responsive/: 17-media-query.html  18-flexbox.html  19-grid-layout.html  20-bootstrap.html  21-bootstrap-layout.html  22-bootstrap-layout-more-responsive.html
1-html-css/3-demo-css/: demo.html
2-python/: financ.py  py01_io.py  py02-cond.py  py03-seq.py  py04-lists.py  py05_sets.py  py06_loops.py  py07-for.py  py07_for.py  py08_while.py  py09_func.py  py10_dicts.py  py10_dicts2.py  py11_modules.py  py11_modules2.py
3-pythonweb/: fornecedores.csv  py01_openpage.py  py01_openpage_on_repl.py  py02_download.py  py03-search-result.py  pypi_search.html
4-pythonwebapp/1-http-server/cgi-bin/: hello.py
5-python-sql/: comandos-aulas.sql  projeto5-select.sql
5-python-sql/1-sql/: comandos-aulas.sql
5-python-sql/2-sqlalchemy/: py01-connect.py  py02-bonus-luciano.py  py02-connect-bonus-luciano.py  py03-variaveis-ligadas.py  py04-injection.py  py05-evita-injection.py  py06-import.py  py07-bonus-aline.py  py07-import-bonus-aline.py  py08-exemplo-completo.py  py08-variaveis-alternativas.py  py09-reserva-voo.py
(+33 files in other folders)
