[tool.poetry]
name = "repl_python3_curso-ebape-prog-aplic-cur2021-turma2021"
version = "0.1.0"
description = ""
authors = ["jeffsantos <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
webbot = "^0.34"
bs4 = "^0.0.1"
beautifulsoup4 = "^4.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
